External/Releases/A/6-100/V2024.04.28/Body/OldVersions/README_V1.md

***

# 4 year anniversary update (Beta 38, 2024, Sunday, April 28th)

**Tag:** `V2024.04.28`

**Released on:** `2024, Sunday, April 28th at 11:16 pm PST`

***Pre-release***

This is the 378h version of the 4 year anniversary update beta. The full release will be created on 2024, Saturday, May 25th. This is the thirty-sixth beta release to be tagged. In the future, I plan to tag the first 3 betas, I just don't know how to right now. These updates should continue daily for a while.

Todays update was published much later in the day. I have been setbacks today. Today, some new media was added, some sections were modified, and the groundwork for the major system setup update started to get laid.

| 📣️ Feedback 💬️ |
|---|
| [`Give feedback on Mastodon`](https://techhub.social/deck/@seanpm2001/112237731368032617) |
| [:octocat: `Give feedback on GitHub`](https://github.com/seanpm2001/seanpm2001/discussions/109/) |

---

## What's Changed (manually written by @seanpm2001)

- **Archives:**
- - Archived data for release 37
- - Archived data for discussion 108
- - Archived files related to the 38th remodel <!-- This number should be 1 higher than release 35, and should match the README beta version) !-->
- - No other archived file changes
- **README:**
- - Updated README to version 112 (beta 38)
- - No other updates to the main README file
- **New media:**
- - 3 new animated GIF files of common GitHub profile README media
- - No new media files
- **Segments:**
- - Updated the `README usage` segment file
- - Added the `My current setup` segment file
- - No new segment data
- **Other:**
- - No other changes

***
