External/Releases/A/6-100/V2024.04.29/Body/OldVersions/README_V1.md

***

# 4 year anniversary update (Beta 39, 2024, Monday, April 29th)

**Tag:** `V2024.04.29`

**Released on:** `2024, Monday, April 29th at 11:45 pm PST`

***Pre-release***

This is the 39th version of the 4 year anniversary update beta. The full release will be created on 2024, Saturday, May 25th. This is the thirty-seventh beta release to be tagged. In the future, I plan to tag the first 3 betas, I just don't know how to right now. These updates should continue daily for a while.

Todays update was published much later in the day, way too close to midnight. I have been setbacks today, taking on some structural projects (tab organization, file sorting, note work, and lots of distractions) Today, some a lot of new media was added, some sections were briefly modified, but not much was done. This was a rushed update due to how little time I had. I hope to do more for tomorrows update, which will be the final update of 2024, April.

| 📣️ Feedback 💬️ |
|---|
| [`Give feedback on Mastodon`](https://techhub.social/deck/@seanpm2001/112237731368032617) |
| [:octocat: `Give feedback on GitHub`](https://github.com/seanpm2001/seanpm2001/discussions/110/) |

---

## What's Changed (manually written by @seanpm2001)

- **Archives:**
- - Archived data for release 38
- - Archived data for discussion 109
- - Archived files related to the 39th remodel <!-- This number should be 1 higher than release 35, and should match the README beta version) !-->
- - No other archived file changes
- **README:**
- - Updated README to version 113 (beta 39)
- - No other updates to the main README file
- **New media:**
- - New media folder: [`GitHub_Errors`](/Graphics/GitHub_Errors/)
- - New media folder: [`GitHub-Follower-Milestones`](/Graphics/GitHub-Follower-Milestones/)
- - New media folder: [`Indoor-Positioning-System`](/Graphics/Indoor-Positioning-System/)
- - New media folder: [`Inspirations`](/Graphics/Inspirations/)
- - New media folder: [`Seanpm2001_During-Remodel`](/Graphics/Seanpm2001_During-Remodel/)
- - No new media files
- **Segments:**
- - Updated the `README usage` segment file
- - Added the `My current setup` segment file
- - No new segment data
- **Other:**
- - No other changes

***
